--- a/src/lang/acf-views.pot
+++ b/src/lang/acf-views.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-11-14T13:24:28+00:00\n"
+"POT-Creation-Date: 2025-11-14T13:37:59+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.12.0\n"
 "X-Domain: acf-views\n"
@@ -141,7 +141,7 @@ msgid "Thanks, hide"
 msgstr ""
 
 #: src/Compatibility/Migration/Version/V_3/Migration_3_8_0.php:40
-msgid "Views are now called Layouts and Cards are called Post Selections. Same great features, just easier to use! (v. 3.8.0)"
+msgid "Views are now called Layouts and Cards are called Post Selections. Same great features, just easier to use!"
 msgstr ""
 
 #: src/Dashboard/Admin_Bar.php:47
